--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,8 @@ deploy:
   image: lwolf/kubectl_deployer:latest
   stage: deploy
   script:
-    - sed -i "s/IMAGE_TAG/"${CI_COMMIT_TAG}"/g" deployment.yml
-    - kubectl --namespace=${KUBE_NAMESPACE} apply -f deployment.yml
+    - sed -i "s/IMAGE_TAG/"${CI_COMMIT_TAG}"/g" deployment.yaml
+    - kubectl --namespace=${KUBE_NAMESPACE} apply -f deployment.yaml
   only:
     - tags
   except:
