--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ deploy:
   stage: deploy
   script:
     - sed -i "s/IMAGE_TAG/"${CI_COMMIT_TAG}"/g" deployment.yaml
-    - kubectl --namespace=${KUBE_NAMESPACE} apply -f deployment.yaml
+    - kubectl --namespace=web-main apply -f deployment.yaml
   only:
     - tags
   except:
