--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,7 +20,21 @@ spec:
         ports:
         - containerPort: 80
       imagePullSecrets:
-        - landing-registry
+        - name: landing-registry
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: landing
+  labels:
+    app: landing
+spec:
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  selector:
+    app: landing
 ---
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
@@ -44,6 +58,8 @@ kind: Ingress
 apiVersion: extensions/v1beta1
 metadata:
   name: landing-ingress
+  annotations:
+    kubernetes.io/ingress.class: traefik
 spec:
   tls:
   - hosts:
